--- a/wrangler.toml
+++ b/wrangler.toml
@@ -26,3 +26,18 @@ bucket_name = "svgshare-files"
 [assets]
 directory = "./public"
 binding = "ASSETS"
+
+[observability]
+enabled = false
+head_sampling_rate = 1
+
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
+
+[observability.traces]
+enabled = false
+persist = true
+head_sampling_rate = 1
