--- a/wrangler.toml
+++ b/wrangler.toml
@@ -28,16 +28,10 @@ directory = "./public"
 binding = "ASSETS"
 
 [observability]
-enabled = false
+enabled = true
 head_sampling_rate = 1
 
 [observability.logs]
 enabled = true
 head_sampling_rate = 1
-persist = true
 invocation_logs = true
-
-[observability.traces]
-enabled = false
-persist = true
-head_sampling_rate = 1
